# rust-cli

./: Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs
src/commands/: hash.rs  mod.rs  scan.rs
