[package]
name = "forge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap ={ version = "4.5", features = ["derive"]}
tokio ={ version = "1.37", features = ["full"]}
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
sha2 = "0.10"
walkdir = "2.5"